--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,7 @@
   "framework": "nextjs",
   "regions": ["iad1"],
   "env": {
-    "NEXT_PUBLIC_APP_URL": {
-      "required": false
-    }
+    "NEXT_PUBLIC_APP_URL": "https://jaetravel.com"
   },
   "functions": {
     "api/**": {
