--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
   "framework": "nextjs",
   "regions": ["iad1"],
   "env": {
-    "NEXT_PUBLIC_APP_URL": "https://jaetravel.com"
+    "NEXT_PUBLIC_APP_URL": "https://www.jaetravel.com"
   }
 }
